WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
104678
[GTK] Spurious stderr output from the event sender
https://bugs.webkit.org/show_bug.cgi?id=104678
Summary
[GTK] Spurious stderr output from the event sender
Martin Robinson
Reported
2012-12-11 08:46:37 PST
Some tests produce spurious stderr output, masking more important stderr output. For instance
http://build.webkit.org/results/GTK%20Linux%2064-bit%20Release/r137316%20(32039)/fast/events/platform-wheelevent-paging-y-in-scrolling-div-stderr.txt
shows: const OpaqueJSValue* continuousMouseScrollByCallback(JSContextRef, JSObjectRef, JSObjectRef, size_t, const OpaqueJSValue* const*, const OpaqueJSValue**): assertion `argumentCount < 3 || !JSValueToBoolean(context, arguments[2])' failed
Attachments
Patch
(2.00 KB, patch)
2012-12-11 08:48 PST
,
Martin Robinson
gustavo
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Martin Robinson
Comment 1
2012-12-11 08:48:14 PST
Created
attachment 178815
[details]
Patch
Martin Robinson
Comment 2
2012-12-11 09:17:06 PST
Committed
r137325
: <
http://trac.webkit.org/changeset/137325
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug