[GTK] Spurious stderr output from the event sender https://bugs.webkit.org/show_bug.cgi?id=104678

Reviewed by Gustavo Noronha Silva.

Eliminate some spurious stderr output from the EventSender by using an early return
instead of an assertion that prints a warning to the console.

* DumpRenderTree/gtk/EventSender.cpp:
(continuousMouseScrollByCallback): We don't support continuous scroll events that
move by page, but we should just fail silently instead of printing an error.

Canonical link: https://commits.webkit.org/122880@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@137325 268f45cc-cd09-0410-ab3c-d52691b4dbfc